## Process this file with automake to produce Makefile.in

gdbdir = $(pkgdatadir)
nobase_dist_gdb_DATA = \
	boost/__init__.py \
	boost/util/__init__.py \
	boost/util/compatibility.py \
	boost/util/printing.py \
	boost/v1_44/__init__.py \
	boost/v1_44/lib/__init__.py \
	boost/v1_44/lib/unordered.py \
	boost/v1_44/optional.py \
	boost/v1_44/ptr_container.py \
	boost/v1_44/smart_ptr.py \
	boost/v1_44/unordered.py \
	boost/v1_48/__init__.py \
	boost/v1_48/lib/__init__.py \
	boost/v1_48/lib/unordered.py \
	boost/v1_48/optional.py \
	boost/v1_48/ptr_container.py \
	boost/v1_48/smart_ptr.py \
	boost/v1_48/unordered.py

clean-local:
	-rm -f \
		boost/*.py[co] \
		boost/util/*.py[co] \
		boost/v1_44/*.py[co] \
		boost/v1_44/lib/*.py[co] \
		boost/v1_48/*.py[co] \
		boost/v1_48/lib/*.py[co]

## vim: set shiftwidth=4 tabstop=4 noexpandtab:
